<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LandpadDetailFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminate="true"
        tools:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clLandpad"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="OCISLY" />

        <TextView
            android:id="@+id/tvFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvName"
            tools:text="Of Course I Still Love You" />

        <TextView
            android:id="@+id/tvStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFullName"
            tools:text="active" />

        <TextView
            android:id="@+id/tvTypeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/type_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFullName" />

        <TextView
            android:id="@+id/tvType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvFullName"
            tools:text="type" />

        <TextView
            android:id="@+id/tvLocalityTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/locality_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTypeTitle" />

        <TextView
            android:id="@+id/tvLocality"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvType"
            tools:text="locality" />

        <TextView
            android:id="@+id/tvRegionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="10dp"
            android:text="@string/region_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLocalityTitle" />

        <TextView
            android:id="@+id/tvRegion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvLocality"
            tools:text="region" />

        <ImageView
            android:id="@+id/ivLaunches"
            style="@style/MyIconStyle"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="32dp"
            android:src="@drawable/ic_launch"
            app:layout_constraintEnd_toStartOf="@+id/ivLandingAttempts"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvRegionTitle" />

        <TextView
            android:id="@+id/tvLaunches"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/ivLaunches"
            app:layout_constraintStart_toStartOf="@id/ivLaunches"
            app:layout_constraintTop_toBottomOf="@id/ivLaunches"
            tools:text="35" />

        <ImageView
            android:id="@+id/ivLandingAttempts"
            style="@style/MyIconStyle"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="32dp"
            android:src="@drawable/ic_land_landing"
            app:layout_constraintEnd_toStartOf="@id/ivLandingSuccess"
            app:layout_constraintStart_toEndOf="@id/ivLaunches"
            app:layout_constraintTop_toBottomOf="@id/tvRegionTitle" />

        <TextView
            android:id="@+id/tvLandingAttempts"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/ivLandingAttempts"
            app:layout_constraintStart_toStartOf="@id/ivLandingAttempts"
            app:layout_constraintTop_toBottomOf="@id/ivLandingAttempts"
            tools:text="14" />

        <ImageView
            android:id="@+id/ivLandingSuccess"
            style="@style/MyIconStyle"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="32dp"
            android:src="@drawable/ic_landing_success"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivLandingAttempts"
            app:layout_constraintTop_toBottomOf="@id/tvRegionTitle" />

        <TextView
            android:id="@+id/tvLandingSuccess"
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="@id/ivLandingSuccess"
            app:layout_constraintStart_toStartOf="@id/ivLandingSuccess"
            app:layout_constraintTop_toBottomOf="@id/ivLandingSuccess"
            tools:text="21" />

        <TextView
            android:id="@+id/tvDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/tvLaunches"
            android:layout_marginVertical="30dp"
            android:layout_marginHorizontal="16dp"
            tools:text="The second ASDS barge, Of Course I Still Love You (OCISLY), had been under construction in a Louisiana shipyard since early 2015 using a different hull—Marmac 304—in order to service launches on the east coast. It was built as a replacement for the first Just Read the Instructions and entered operational service for Falcon 9 Flight 19 in late June 2015. As of June 2015, its home port was Jacksonville, Florida, but after December 2015, it was transferred 160 miles (260 km) further south, at Port Canaveral. While the dimensions of the ship are nearly identical to the first ASDS, several enhancements were made including a steel blast wall erected between the aft containers and the landing deck. The ship was in place for a first-stage landing test on the CRS-7 mission, which failed on launch on 28 June 2015. On 8 April 2016 the first stage, which launched the Dragon CRS-8 spacecraft, successfully landed for the first time ever on OCISLY, which is also the first ever drone ship landing. In February 2018, the Falcon Heavy Test Flight's central core exploded upon impact next to OCISLY that damaged two of the four thrusters on the drone ship. Two thrusters were removed from the Marmac 303 barge in order to repair OCISLY." />

        <Button
            android:id="@+id/tvWikipedia"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="24dp"
            app:layout_constraintTop_toBottomOf="@id/tvDescription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/open_wikipedia_article"
            android:textAllCaps="false" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>