<resources>
    <string name="app_name">AppliftingShowcaseApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="last_update_title">Last update:</string>
    <string name="status_title">Status:</string>
    <string name="capsules">Capsules</string>
    <string name="landpads">Landpads</string>
    <string name="select_prompt">Select one category</string>
    <string name="open_wikipedia_article">Open Wikipedia article</string>
    <string name="locality_title">Locality:</string>
    <string name="region_title">Region:</string>
    <string name="type_title">Type:</string>
</resources>