...

       <Button
           android:id="@+id/btnCapsules"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/capsules"
           app:layout_constraintEnd_toStartOf="@+id/btnLandpads"
           app:layout_constraintHorizontal_bias="0.5"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"/>

        <Button
            android:id="@+id/btnLandpads"
...
            android:layout_marginBottom="4dp"
            app:layout_constraintTop_toBottomOf="@id/svFilter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvList"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/dividerAfterFilter"
            app:layout_constraintBottom_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
